feat: creazioni variabili

--- a/index.html
+++ b/index.html
@@ -11,5 +11,9 @@
     <div id="surname"></div>
     <div id="color"></div>
     <div id="number"></div>
+
+    <!-- !link a js -->
+    <script src="pswdgen.js"></script>
+    <!-- !link a js -->
   </body>
 </html>
