--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
   </head>
   <body>
     <h1>Password Generator</h1>
-    <div id="name"></div>
+    <!-- <div id="name"></div>
     <div id="surname"></div>
     <div id="color"></div>
-    <div id="number"></div>
+    <div id="number"></div> -->
+    <div id="password"></div>
 
     <!-- !link a js -->
     <script src="pswdgen.js"></script>
